<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contestant"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textCapWords" >
    </EditText>

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextCountry"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10" />

    <ListView
        android:id="@+id/genericListView"
        android:layout_width="377dp"
        android:layout_height="191dp" >
    </ListView>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/add_contestant" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>